packages/components/src/Card/Card.css
:root {
  --card--background-color: var(--color-white);
  --card--header-background-color: var(--color-grey--lightest);
  --card--content-background-color: var(--color-white);
  --card--border-color: var(--color-grey--lighter);
  --card--accent-color: var(--color-grey);
  --card--base-padding: var(--space-base);
}

.card {
  display: block;
  width: 100%;
  border: var(--border-base) solid var(--card--border-color);
  border-radius: var(--radius-base);
  overflow: auto;
  outline-color: var(--color-outline);
  background-color: var(--card--background-color);
}

/* Adjust `Content` components public padding to match the cards */

.card > * {
  --public-content--padding: var(--card--base-padding);
}

/* Remove the nested `Content` components public padding */

.card > * > * {
  --public-content--padding: 0;
}

.card:active {
  outline: 0;
}

.accent {
  border-top: 0.5rem solid var(--card--accent-color);
}

.clickable {
  --card--border-color: transparent;

  box-shadow: var(--shadow-base);
  color: inherit;
  text-decoration: inherit;
  cursor: pointer;
  transition: all var(--timing-quick) linear;
}

.clickable:hover,
.clickable:focus {
  background-color: var(--color-yellow--lightest);
}

.header {
  padding: var(--card--base-padding);
  background-color: var(--card--header-background-color);
}

